--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <header> 
         <h1>Formulário de cadastro</h1>
     </header>
-    <section>
-        <label for="nome"> Nome </label>
-            <input type="text" id="nome"/> 
-        <br>
-        <label for="email"> E-mail </label>
-            <input type="email" id="email"/> 
-        <br>
-        <label for="senha"> Senha </label>
-            <input type="password" name="senha" id="senha"/>
-        <br>
-        <button type="submit">Cadastrar</button>
-    </section>
+    <form>
+        <section>
+            <label for="nome"> Nome </label>
+                <input type="text" id="nome"/> 
+            <br>
+            <label for="email"> E-mail </label>
+                <input type="email" id="email"/> 
+            <br>
+            <label for="senha"> Senha </label>
+                <input type="password" name="senha" id="senha"/>
+            <br>
+            <button type="submit">Cadastrar</button>
+        </section>
+    </form>
 </body>
 </html>
